# gcloud_speech

./: README.md
gcloud_speech/: .sync_from_bazel.sh  .sync_googleapis.sh  CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
gcloud_speech/googleapis/: .GIT_STATUS  README.md
gcloud_speech/googleapis/google/api/: annotations.proto  auth.proto  backend.proto  billing.proto  config_change.proto  consumer.proto  context.proto  control.proto  distribution.proto  documentation.proto  endpoint.proto  http.proto  httpbody.proto  label.proto  log.proto  logging.proto  metric.proto  monitored_resource.proto  monitoring.proto  quota.proto  service.proto  source_info.proto  system_parameter.proto  usage.proto
gcloud_speech/googleapis/google/api/experimental/: authorization_config.proto  experimental.proto
gcloud_speech/googleapis/google/api/servicecontrol/v1/: check_error.proto  distribution.proto  log_entry.proto  metric_value.proto  operation.proto  quota_controller.proto  service_controller.proto
gcloud_speech/googleapis/google/api/servicemanagement/v1/: resources.proto  servicemanager.proto
gcloud_speech/googleapis/google/appengine/legacy/: audit_data.proto
gcloud_speech/googleapis/google/appengine/logging/v1/: request_log.proto
gcloud_speech/googleapis/google/appengine/v1/: app_yaml.proto  appengine.proto  application.proto  audit_data.proto  deploy.proto  instance.proto  location.proto  operation.proto  service.proto  version.proto
gcloud_speech/googleapis/google/assistant/embedded/v1alpha1/: embedded_assistant.proto
gcloud_speech/googleapis/google/assistant/embedded/v1alpha2/: embedded_assistant.proto
gcloud_speech/googleapis/google/bigtable/admin/v2/: bigtable_instance_admin.proto  bigtable_table_admin.proto  common.proto  instance.proto  table.proto
gcloud_speech/googleapis/google/bigtable/v1/: bigtable_data.proto  bigtable_service.proto  bigtable_service_messages.proto
gcloud_speech/googleapis/google/bigtable/v2/: bigtable.proto  data.proto
gcloud_speech/googleapis/google/bytestream/: bytestream.proto
gcloud_speech/googleapis/google/cloud/audit/: audit_log.proto
gcloud_speech/googleapis/google/cloud/billing/v1/: cloud_billing.proto
gcloud_speech/googleapis/google/cloud/dataproc/v1/: clusters.proto  jobs.proto  operations.proto
gcloud_speech/googleapis/google/cloud/dataproc/v1beta2/: clusters.proto  jobs.proto  operations.proto  workflow_templates.proto
gcloud_speech/googleapis/google/cloud/dialogflow/v2/: agent.proto  context.proto  entity_type.proto  intent.proto  session.proto  session_entity_type.proto  webhook.proto
gcloud_speech/googleapis/google/cloud/dialogflow/v2beta1/: agent.proto  context.proto  entity_type.proto  intent.proto  session.proto  session_entity_type.proto  webhook.proto
gcloud_speech/googleapis/google/cloud/functions/v1beta2/: functions.proto  operations.proto
gcloud_speech/googleapis/google/cloud/location/: locations.proto
gcloud_speech/googleapis/google/cloud/support/: common.proto
gcloud_speech/googleapis/google/container/v1/: cluster_service.proto
gcloud_speech/googleapis/google/container/v1alpha1/: cluster_service.proto
gcloud_speech/googleapis/google/container/v1beta1/: cluster_service.proto
gcloud_speech/googleapis/google/datastore/v1/: datastore.proto  entity.proto  query.proto
gcloud_speech/googleapis/google/datastore/v1beta3/: datastore.proto  entity.proto  query.proto
gcloud_speech/googleapis/google/firestore/v1beta1/: common.proto  document.proto  firestore.proto  query.proto  write.proto
gcloud_speech/googleapis/google/genomics/v1/: annotations.proto  cigar.proto  datasets.proto  operations.proto  position.proto  range.proto  readalignment.proto  readgroup.proto  readgroupset.proto  reads.proto  references.proto  variants.proto
gcloud_speech/googleapis/google/genomics/v1alpha2/: pipelines.proto
gcloud_speech/googleapis/google/iam/v1/: iam_policy.proto  policy.proto
gcloud_speech/googleapis/google/logging/type/: http_request.proto  log_severity.proto
gcloud_speech/googleapis/google/logging/v2/: log_entry.proto  logging.proto  logging_config.proto  logging_metrics.proto
gcloud_speech/googleapis/google/longrunning/: operations.proto
gcloud_speech/googleapis/google/monitoring/v3/: alert.proto  alert_service.proto  common.proto  group.proto  group_service.proto  metric.proto  metric_service.proto  mutation_record.proto  notification.proto  notification_service.proto  uptime.proto  uptime_service.proto
gcloud_speech/googleapis/google/pubsub/v1/: pubsub.proto
gcloud_speech/googleapis/google/pubsub/v1beta2/: pubsub.proto
gcloud_speech/googleapis/google/rpc/: code.proto  error_details.proto
gcloud_speech/googleapis/google/spanner/v1/: keys.proto  mutation.proto  query_plan.proto  result_set.proto  spanner.proto  transaction.proto  type.proto
gcloud_speech/googleapis/google/storagetransfer/v1/: transfer.proto  transfer_types.proto
gcloud_speech/googleapis/google/tracing/: trace.proto
gcloud_speech/googleapis/google/type/: color.proto  date.proto  dayofweek.proto  latlng.proto  money.proto  postal_address.proto  timeofday.proto
gcloud_speech/googleapis/google/watcher/v1/: watch.proto
gcloud_speech/src/: gcloud_speech_action_node.cc  speech_to_text_action_handler.cc  speech_to_text_action_handler.h
gcloud_speech/src/workspace/: .WORKSPACE_GIT_STATUS
gcloud_speech/src/workspace/util/: status.cc  status.h  status_macros.h  statusor.h
gcloud_speech_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
gcloud_speech_msgs/action/: SpeechToText.action
gcloud_speech_msgs/msg/: LinearPcm16Le16000Audio.msg  RecognitionHypothesis.msg
gcloud_speech_utils/: .sync_from_bazel.sh  CHANGELOG.rst  CMakeLists.txt  package.xml
gcloud_speech_utils/launch/: all_in_one.launch
gcloud_speech_utils/scripts/: example_client.py  playback_microphone_audio.py
gcloud_speech_utils/src/: .LICENSE.h  record_microphone_audio.cc
gcloud_speech_utils/src/workspace/: .WORKSPACE_GIT_STATUS
gcloud_speech_utils/src/workspace/util/: simple_thread_safe_queue.h  statusor.cc
(+109 files in other folders)
