<?xml version="1.0"?>
<package>
  <name>gcloud_speech</name>
  <version>0.0.4</version>
  <description>Google Cloud Speech client.</description>

  <maintainer email="shengye@ucsd.edu">Shengye Wang</maintainer>
  <license>BSD</license>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gcloud_speech_msgs</build_depend>
  <build_depend>grpc</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>gcloud_speech_msgs</run_depend>
  <run_depend>grpc</run_depend>
  <run_depend>libgflags-dev</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
