<?xml version="1.0"?>
<package>
  <name>gcloud_speech_msgs</name>
  <version>0.0.3</version>
  <description>
    ROS message definitions for gcloud_speech and relevant packages.
  </description>

  <maintainer email="shengye@ucsd.edu">Shengye Wang</maintainer>
  <license>BSD</license>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
