<?xml version="1.0"?>
<package>
  <name>gcloud_speech_utils</name>
  <version>0.0.3</version>
  <description>Utilities and examples for gcloud_speech package.</description>

  <maintainer email="shengye@ucsd.edu">Shengye Wang</maintainer>
  <license>BSD</license>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gcloud_speech_msgs</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>portaudio19-dev</build_depend>
  <build_depend>python-pyaudio</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>gcloud_speech_msgs</run_depend>
  <run_depend>libgflags-dev</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>portaudio19-dev</run_depend>
  <run_depend>python-pyaudio</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
